objects/INFRA__Account_Forecast__c.object
<CustomObject>
    <description>Object to store Account Exception forecast published through JDA connector</description>
    <fields>
        <fullName>INFRA__BU_Forecast_Source_Id__c</fullName>
        <description>Field that keeps the reference to BU Forecast Tool SFDC object record</description>
        <inlineHelpText>Forecast  leaf level SFDC Id. Example - Account Id or Opportunity Id or Opp Line Item Id or Forecast Id</inlineHelpText>
        <label>BU Forecast Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Business_Unit__c</fullName>
        <description>BU identifier for which the forecast data is created. The value in this field should have the corresponding configuration in custom settings &quot;JDA Connector Config&quot;.</description>
        <inlineHelpText>Business Unit Abbreviation that is required by JDA bridge.</inlineHelpText>
        <label>Business Unit</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Customer_Indicator__c</fullName>
        <description>Field to store Customer Indicator(Type)</description>
        <inlineHelpText>200 - Sold To</inlineHelpText>
        <label>Customer Indicator</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Customer__c</fullName>
        <description>Field to store TED Customer #</description>
        <inlineHelpText>TED Customer #, recognized by JDA</inlineHelpText>
        <label>Customer #</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Data_Stream__c</fullName>
        <description>Field to indicate if the forecast data is for opportunity or sales forecast</description>
        <inlineHelpText>Valid values are - 
500 - Sales Opportunity
501 - Engineering Opportunity
506 - Sales Booking Forecast
507 - Sales Demand Forecast</inlineHelpText>
        <label>Data Stream</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Forecast_Key__c</fullName>
        <description>Unique External Id Field. This key will be generated by the Framework</description>
        <externalId>true</externalId>
        <label>Forecast Key</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>INFRA__GAM_Code__c</fullName>
        <description>GAM code, if the forecast is for GAM account</description>
        <label>GAM Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Hierarchy_Type__c</fullName>
        <description>Field to indicate forecast is for GAM or Sales hierarchy</description>
        <label>Hierarchy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GAM</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INFRA__Marked_For_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if data needs to be deleted from bridge</description>
        <inlineHelpText>Flag to indicate if record needs to be deleted.</inlineHelpText>
        <label>Marked For Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INFRA__Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field indicating if the forecast data is published to JDA Bridge</description>
        <inlineHelpText>Flag to indicate that forecast was published in the bridge by integration</inlineHelpText>
        <label>Published?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INFRA__Re_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag field to indicate that the record was republished by API and needs to be pushed to Bridge</description>
        <inlineHelpText>A flag field to indicate that the record was republished by API and needs to be pushed to Bridge</inlineHelpText>
        <label>Re-Published?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INFRA__Region__c</fullName>
        <description>If BU has multiple region, then those value needs to be passed or the BU level Default Region will be used from BU Configurations.
Examples are EMEA (0401), NA, SA, ANZ, AP</description>
        <inlineHelpText>EMEA (0401), NA, SA, ANZ, AP</inlineHelpText>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Site_Indicator__c</fullName>
        <description>Site Indicator for the Site. Values are - 
100	Building 
101	Plant 
102	Legal Org 
103	Others</description>
        <inlineHelpText>Valid values are - 100 - Building, 101 - Plant, 102 - Legal Org, 103 - Others</inlineHelpText>
        <label>Site Indicator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Site__c</fullName>
        <description>The plant or the building that the data is being sent for. For e.g. 0492, D71 etc. If value is not set then default global value will be used</description>
        <inlineHelpText>The plant or the building that the data is being sent for. For e.g. 0492, D71 etc.</inlineHelpText>
        <label>Site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Territory_Code__c</fullName>
        <description>Account Territory Code</description>
        <inlineHelpText>Sales territory code</inlineHelpText>
        <label>Territory Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Territory_Indicator__c</fullName>
        <description>Sales territory indicator. DD1 to DD7</description>
        <inlineHelpText>DD1 to DD7</inlineHelpText>
        <label>Territory Indicator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Account Forecast</label>
    <listViews>
        <fullName>IND_Records</fullName>
        <columns>NAME</columns>
        <columns>INFRA__BU_Forecast_Source_Id__c</columns>
        <columns>INFRA__Customer__c</columns>
        <columns>INFRA__Business_Unit__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>INFRA__Business_Unit__c</field>
            <operation>equals</operation>
            <value>IND</value>
        </filters>
        <label>IND Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>INFRA__All</fullName>
        <columns>NAME</columns>
        <columns>INFRA__BU_Forecast_Source_Id__c</columns>
        <columns>INFRA__Business_Unit__c</columns>
        <columns>INFRA__Customer__c</columns>
        <columns>INFRA__Customer_Indicator__c</columns>
        <columns>INFRA__Data_Stream__c</columns>
        <columns>INFRA__Forecast_Key__c</columns>
        <columns>INFRA__Region__c</columns>
        <columns>INFRA__Site__c</columns>
        <columns>INFRA__Territory_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Forecast #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>